[project]
name = "aiohttp-oauth2-client"
version = "0.1.0"
description = ""
authors = [{name = "Stijn Caerts", email = "stijn.caerts@vito.be"}]
dependencies = [
    "aiohttp~=3.8.4",
    "pydantic~=2.7.1",
    "rich"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "nest-asyncio",
    "aioresponses"
]

[tool.setuptools.packages.find]
include = ["aiohttp_oauth2_client*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"